--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,10 @@ code {
   --hover-yellow: #ED9E59;
 }
 
+/* .toast-font-size {
+  font-size: 0.37em !important;
+} */
+
 i,
 button,
 input[type="submit"] {
@@ -40,7 +44,7 @@ section {
   display: grid;
   place-items: center;
   position: relative;
-  padding: 5rem 10rem 10rem 10rem;
+  padding: 7rem 10rem 10rem 10rem;
   overflow: hidden;
 }
 
@@ -57,10 +61,6 @@ section h1 span {
   padding: 0.5rem 0;
   color: var(--yellow);
   border-bottom: 7px solid var(--yellow);
-}
-
-.fake-header {
-  height: 130px;
 }
 
 section .decoration-box {
@@ -98,9 +98,15 @@ section:nth-of-type(even) .decoration-box {
 
 .loader {
   width: fit-content;
+  height: fit-content;
   margin: auto;
 }
 
+section.Toastify {
+  padding: 0;
+  font-size: 0.33em !important;
+  font-weight: 600 !important;
+}
 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -110,7 +116,7 @@ section:nth-of-type(even) .decoration-box {
   }
 
   section {
-    padding: 5rem 5rem 9rem 5rem;
+    padding: 6rem 5rem 9rem 5rem;
   }
 
   section h1 span {
@@ -125,8 +131,7 @@ section:nth-of-type(even) .decoration-box {
   }
 
   section {
-    padding: 0 3rem;
-    padding: 5rem 3rem 10rem 3rem;
+    padding: 6rem 3rem 10rem 3rem;
   }
 
   section h1 span {
@@ -138,10 +143,6 @@ section:nth-of-type(even) .decoration-box {
 @media only screen and (max-width: 768px) {
   body {
     font-size: 30px;
-  }
-
-  section {
-    padding: 0 2rem;
   }
 
   section h1 {
