--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -116,7 +116,7 @@
 }
 
 .contact-right .form-group i {
-    color: var(--yellow);
+    color: var(--purple);
     font-size: 0.4em;
     position: absolute;
     top: 50%;
@@ -137,7 +137,7 @@
     background-color: #f2f2f2;
 }
 
-.contact-right input[type="submit"] {
+.contact-right button {
     width: 95%;
     font-size: 0.4em;
     font-weight: 600;
@@ -150,6 +150,6 @@
     transition: all 0.2s ease-in;
 }
 
-.contact-right input[type="submit"]:hover {
+.contact-right button:hover {
     background-color: var(--hover-purple);
 }
