--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -197,13 +197,12 @@ footer {
 
 
 @media only screen and (max-width: 360px) {
-    .footer-1 {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
     .footer-1 img {
         width: 25%;
         border-radius: 3px;
+    }
+
+    .footer-1 .company-description {
+        padding-left: 1rem;
     }
 }
