--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -5,7 +5,7 @@ nav {
     transform: translate(-50%, 0);
     width: 88%;
     padding: 1.2rem 6rem;
-    z-index: 2;
+    z-index: 5 !important;
 }
 
 nav .logo {
@@ -158,6 +158,7 @@ nav .login-btns button:hover {
     background-color: white;
     padding: 0.5rem 1rem;
     border-radius: 5px;
+    box-shadow: 0px 0px 5px 2px #d9d9d9;
 }
 
 .mobile-nav .mobile-menus a {
@@ -195,17 +196,7 @@ nav .login-btns button:hover {
     }
 }
 
-@media (max-width: 1100px) {
-    nav {
-        font-size: 40px;
-    }
-}
-
 @media (max-width: 900px) {
-    nav {
-        font-size: 35px;
-    }
-
     nav>div:last-child {
         width: 100% !important;
     }
@@ -216,5 +207,16 @@ nav .login-btns button:hover {
 
     .mobile-nav {
         display: block;
+    }
+}
+
+@media (max-width: 500px) {
+    nav .logo {
+        width: 20% !important;
+    }
+
+    .mobile-nav .mobile-menus {
+        right: 9%;
+        width: 150px;
     }
 }
