--- a/client/src/pages/Recipe/Recipe.css
+++ b/client/src/pages/Recipe/Recipe.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 50vh;
-    max-height: 70vh;
+    height: 75vh;
     padding-bottom: 5rem;
     overflow-y: auto;
 }
