--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -117,6 +118,88 @@ section.Toastify {
   padding: 0;
   font-size: 0.33em !important;
   font-weight: 600 !important;
+}
+
+
+/*! Button Styling */
+.btn {
+  width: fit-content;
+  margin: auto;
+  padding: 10px 20px;
+  border: none;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  font-size: 0.28em;
+  font-weight: 500;
+  transition: var(--transition);
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.btn-primary {
+  background-color: var(--purple);
+  color: var(--white);
+}
+
+.btn-primary:hover {
+  background-color: #551a3a;
+}
+
+.btn-secondary {
+  background-color: var(--yellow);
+  color: var(--white);
+}
+
+.btn-secondary:hover {
+  background-color: #d67a2b;
+}
+
+.btn-outline {
+  background-color: transparent;
+  border: 1px solid var(--purple);
+  color: var(--purple);
+}
+
+.btn-outline:hover {
+  color: white;
+  background-color: var(--purple);
+}
+.close-modal {
+    font-size: 0.5em;
+    position: absolute;
+    top: 7%;
+    right: 5.5%;
+    cursor: pointer;
+    transition: all 0.2s linear;
+}
+.close-modal:hover {
+    rotate: 90deg;
+}
+
+
+
+
+/* Empty State */
+.empty-state {
+  width: 70vw;
+  text-align: center;
+  padding: 50px 20px;
+  background-color: var(--white);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+}
+
+.empty-icon {
+  font-size: 1em;
+  color: var(--medium-gray);
+  margin-bottom: 20px;
+}
+
+.empty-message {
+  font-size: 0.4em;
+  color: var(--dark-gray);
+  margin-bottom: 20px;
 }
 
 
@@ -237,7 +320,7 @@ section.Toastify {
   }
 
   section {
-    padding: 1rem 1.5rem 4rem 1.5rem;
+    padding: 2rem 1.5rem 4rem 1.5rem;
   }
 
   section:nth-of-type(odd) {
