--- a/client/src/pages/Cart/Cart.css
+++ b/client/src/pages/Cart/Cart.css
@@ -289,41 +289,38 @@
     background-color: transparent;
     border: none;
 }
+.cart-container .bottom-payment-form .payment-switch {
+    width: 95%;
+    margin: auto;
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cart-container .bottom-payment-form span {
+    font-size: 0.35em;
+    font-weight: 600;
+    color: var(--purple);
+}
+.bottom-payment-form .payment-switch span:last-child {
+    display: flex;
+    align-items: center;
+    font-size: 0.32em;
+    color: black;
+}
 .cart-container .bottom-payment-form button {
     display: block;
     width: 95%;
+    margin: auto;
     color: white;
     font-size: 0.35em;
     font-weight: 600;
     background-color: var(--yellow);
     padding: 0.75rem 1rem;
-    margin: auto;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     border: none;
     border-radius: 10px;
 }
 .cart-container .bottom-payment-form button:hover {
     background-color: var(--hover-yellow);
-}
-
-
-/*! Empty Cart */
-.empty-cart-container {
-    padding: 5rem 3rem;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px 2px #d9d9d9;
-}
-.empty-cart-container h1 {
-    font-size: 0.9em;
-}
-.empty-cart-container button {
-    display: block;
-    margin: auto;
-    font-size: 0.35em;
-    font-weight: 600;
-    padding: 0.5rem 2rem;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    background-color: var(--yellow);
 }
