--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -87,7 +87,8 @@
     height: 100%;
     position: absolute;
     right: 0;
-    background-color: var(--hover-yellow);
+    background-color: white;
+    /* background-color: var(--hover-yellow); */
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
 }
