--- a/client/src/pages/Food/Food.css
+++ b/client/src/pages/Food/Food.css
@@ -1,3 +1,6 @@
+.foods-container {
+    padding-bottom: 2rem;
+}
 /*! Category Filters */
 .category-filter {
     display: flex;
@@ -38,159 +41,18 @@
 
 /*! Main Foods Grid */
 .food-grid {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    height: 75vh;
+    padding-bottom: 8rem;
+    overflow-y: auto;
     gap: 1.5rem;
 }
-
-.food-card {
-    cursor: pointer;
-    width: 80%;
-    margin: auto;
+.food-grid::-webkit-scrollbar {
     display: none;
-    padding: 2rem;
-    border: 1px solid #d9d9d9;
-    border-radius: 10px;
-    box-shadow: 5px 5px 2px 1px #f2f2f2;
 }
 
-.food-card.show-food {
-    display: flex;
-    justify-content: space-between;
-}
-
-.food-card:hover {
-    transform: translateY(10px);
-    box-shadow: 0px 0px 0px 0px #f2f2f2;
-}
-
-/** Food Img */
-.food-card .food-img {
-    position: relative;
-    width: 180px;
-    height: 180px;
-}
-
-.food-img img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-}
-
-.food-card .food-img .add-cart-btn {
-    position: absolute;
-    bottom: -8%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 55%;
-    display: flex;
-    border-radius: 4px;
-}
-
-.food-img .add-cart-btn button {
-    font-size: 0.25em;
-    border: none;
-    color: var(--yellow);
-    padding: 0.3rem 0.4rem;
-    border: 2px solid var(--yellow);
-    background-color: white;
-    transition: all 0.3s linear;
-    font-weight: 800;
-}
-
-.food-img .add-cart-btn button:hover {
-    background-color: #fcf2e8;
-}
-
-.food-img .add-cart-btn .add-btn {
-    width: 100%;
-    border-radius: 5px;
-}
-
-.food-img .add-cart-btn .decrement-btn {
-    width: fit-content;
-    border-right: 1px solid var(--yellow);
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-}
-
-.food-img .add-cart-btn .increment-btn {
-    width: fit-content;
-    border-left: 1px solid var(--yellow);
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.food-img .add-cart-btn input {
-    width: 100%;
-    color: var(--purple);
-    font-size: 0.3em;
-    text-align: center;
-    border: none;
-    outline: none;
-    border-top: 2px solid var(--yellow);
-    border-bottom: 2px solid var(--yellow);
-    background-color: #fcf2e8;
-}
-
-.food-img .add-cart-btn input::-webkit-outer-spin-button,
-.food-img .add-cart-btn input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-}
-
-/* Firefox */
-.food-img .add-cart-btn input[type=number] {
-    -moz-appearance: textfield;
-}
-
-
-/** Food Details */
-.food-card .food-details {
-    position: relative;
-    width: 77%;
-    height: fit-content;
-    padding: 0.5rem 0;
-}
-
-.food-card .food-details .veg-icon {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 0;
-}
-
-.food-card .food-details .name {
-    color: var(--purple);
-    font-size: 0.37em;
-}
-
-.food-card .food-details .category {
-    color: var(--yellow);
-    font-size: 0.32em;
-}
-
-.food-card .food-details div {
-    display: flex;
-    padding-top: 0.5rem;
-}
-
-.food-card .food-details span {
-    width: fit-content;
-    font-size: 0.33em;
-    font-weight: 600;
-}
-
-.price {
-    color: grey;
-    text-decoration: line-through;
-}
-
-.food-card .food-details p {
-    color: grey;
-    font-size: 0.3em;
-    font-weight: 600;
-    padding-top: 0.5rem;
-}
 
 
 /*! Bottom Side View Cart Container */
